<resources>
    <string name="app_name">Aquario</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="sign_in">Sign In</string>
    <string name="please_complete_below_fields_to_log_in_into_your_account">Please complete below fields to log in into your account.</string>
    <string name="forgot_the_password">Forgot the password?</string>
    <string name="register">Register</string>
    <string name="register_failed">Register Failed. Please try again</string>
    <string name="please_fill_the_fields_below_to_create_a_new_account">Please fill the fields below to create a new account.</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="title_activity_main">MainActivity</string>

    <string name="sensors">Sensors</string>
    <string name="analytics">Analytics</string>
    <string name="feeding">Feeding</string>
    <string name="video_streaming">View</string>
    <string name="settings">Settings</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="aquarium_nickname">Aquarium Nickname</string>
    <string name="time_measurement">Time Measurement:</string>
    <string name="recommended">Recommended:</string>
    <string name="now">Now:</string>
    <string name="see_details">See Details</string>
    <string name="active_sensors">Active Sensors</string>
    <string name="invalid_code">Not a valid code</string>
    <string name="invalid_nickname">This nickname is not allowed</string>
    <string name="please_complete_the_following_fields_to_add_your_aquarium_to_your_account">Please complete the following fields to add your aquarium to your account.</string>
    <string name="aquarium_code">Aquarium Code</string>
    <string name="nickname">Nickname</string>
    <string name="add">Add</string>
    <string name="sensor_details">Sensor Details</string>
    <string name="sensor_analytics">Sensor Analytics</string>
    <string name="sensor_characteristics">Sensor Characteristics</string>
    <string name="sensed_data">Sensed Data</string>
    <string name="feeder">Feeder</string>
    <string name="turn_on_off_autofeed">Turn on/off autofeed</string>
    <string name="set_timer_for_auto_feeding">Set timer for auto - feeding</string>
    <string name="press_to_cook_the_fish">Press to cook the fish</string>
    <string name="switch_aquarium">Switch Aquarium</string>
    <string name="water_level_recommended"><![CDATA[>80]]></string>
    <string name="feeding_timer">Feeding Timer</string>
</resources>