<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_sensors"
            android:icon="@drawable/main"
            android:title="@string/sensors"
            android:checked="true"/>
        <item
            android:id="@+id/nav_analytics"
            android:icon="@drawable/analytics"
            android:title="@string/analytics"/>
        <item
            android:id="@+id/nav_feeding"
            android:icon="@drawable/feeding"
            android:title="@string/feeding"/>
        <item
            android:id="@+id/nav_video"
            android:icon="@drawable/video"
            android:title="@string/video_streaming"/>
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/settings"
            android:title="@string/settings"/>
    </group>
</menu>