<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/card_sensor_background"
    android:layout_marginBottom="16dp">
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_vertical"
        android:layout_marginHorizontal="25dp"
        android:layout_marginVertical="30dp"
        android:layout_weight="1">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="11dp">
            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="#02C39A"
                android:layout_marginRight="5dp"/>
            <LinearLayout
                android:orientation="vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/now"
                android:textStyle="bold"/>
            <TextView
                android:id="@+id/tw_sensor_card_now"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="cgfr12dwfchg"/>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="11dp">
            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="#FF8A45"
                android:layout_marginRight="5dp"/>
            <LinearLayout
                android:orientation="vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/recommended"
                    android:textStyle="bold"/>
                <TextView
                    android:id="@+id/tw_sensor_card_recommended"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="cgfr12dwfchg"/>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="#FF8A45"
                android:layout_marginRight="5dp"/>
            <LinearLayout
                android:orientation="vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/time_measurement"
                    android:textStyle="bold"/>
                <TextView
                    android:id="@+id/tw_sensor_card_time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="cgfr12dwfchg"/>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_weight="1"
        android:orientation="vertical"
        android:layout_marginVertical="20dp">
        <TextView
            android:id="@+id/tw_sensor_card_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Sensor Type"
            android:textStyle="bold"
            android:textSize="16sp"/>
        <ImageView
            android:id="@+id/iw_sensor_card_type_icon"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <TextView
            android:id="@+id/tw_sensor_card_details"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/see_details"
            android:textSize="11sp"/>

    </LinearLayout>
</LinearLayout>